--- a/style.css
+++ b/style.css
@@ -44,9 +44,10 @@ ul , a {
     padding: 2rem 1.5rem;
 
     max-width: 1200px;
-    margin: 0 auto;
-    
+    margin: 0 auto; 
 }
+
+
 .header ul {
     display: flex;
     gap: 1rem;
@@ -56,6 +57,8 @@ ul , a {
     display: block;
     padding: 1rem;
     color: black;
+
+    transition: ease 0.5s;
 
 }
 
@@ -75,6 +78,7 @@ ul , a {
     margin: 0 auto;
 
     padding: 1rem 1.5rem;
+    gap: 1rem;
     
 }
 
@@ -90,6 +94,14 @@ ul , a {
     font-size: 2rem;
 
     max-width: 510px;
+}
+
+.content-one h1 span {
+    background: linear-gradient(to left, #49eee0, #a004e9a6);
+    
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
 }
 
 .content-one p {
@@ -128,6 +140,8 @@ ul , a {
     font-weight: bold;
     border: 0;
     cursor: pointer;
+
+    transition: ease 0.5s;
     
 }
 
@@ -168,6 +182,7 @@ ul , a {
     color: var(--Moderate-Cyan);
    
     border-bottom: 1px solid var(--Moderate-Cyan);
+    transition: ease 0.5s;
 }
 
 .link:hover {
@@ -225,10 +240,13 @@ ul , a {
 
 .illustration {
     width: 50%;
+    
 }
 
 .illustration img {
     width: 100%;
+    height: 100%;
+    object-fit: fill;
 }
 
 /* ---Content three--- */
@@ -281,25 +299,28 @@ ul , a {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
 
-    width: 45%;
-    padding: 1rem;
+    width: 50%;
+    padding: 1rem 0.5rem;
     
     background-color: var(--Bright-Blue);
     color: var(--Light-Grayish-Blue);
     border-radius: 0.5rem;
     border: none;
-
+    cursor: pointer;
+    transition: ease 0.5s;
 }
 
-
-
-
+.content-three .form button:hover {
+    background-color: hsl(224, 93%, 58%, 0.7);
+}
 
 footer {
     background-color: var(--Very-Dark-Blue);
 }
 
 .footer {
+    padding: 4rem 1.5rem;
+
     display: flex;
     justify-content: space-between;
 }
@@ -308,5 +329,111 @@ footer {
     color: var(--Light-Grayish-Blue);
 }
 
-.footer img {
+.footer a:hover {
+    color: rgb(185, 92, 240);
 }
+
+.footer ul li {
+    margin-bottom: 1rem;
+}
+
+.footer ul li:last-of-type {
+    margin-bottom: 0;
+}
+
+.footer .contact {
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
+}
+
+.footer .social-media {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.footer .social-media li{
+    margin-bottom: 0;
+}
+
+.footer .social-media li a{
+    display: block;
+    width:40px;
+    height: 40px;
+}
+
+.footer .social-media i {
+    padding: 0.5rem;
+    border: 1px solid;
+    border-radius: 50%;
+    
+}
+
+@media screen and (max-width:900px) {
+    .content-one h1 , .content-two h2 {
+        font-size: 1.75rem;
+    }
+
+    .content-three .form button {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .content-one input {
+        padding: 0.5rem 0.5rem;
+    }
+
+    .content-one button {
+        padding: 0.5rem;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    section.container {
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+
+    section .container {
+        flex-direction: column-reverse;
+    }
+
+    .container {
+        flex-direction: column;
+    }
+
+    .illustration {
+        width: 100%;
+    }
+
+    .content-one {
+        width: 100%;
+        margin-bottom: 3rem;
+    }
+
+    .content-two {
+        width: 100%;
+    }
+
+    .content-three .description {
+        width: 100%;
+        text-align: center;
+    }
+
+    .content-three .form {
+        width: 100%;
+    }
+
+    .content-three .form button {
+        width: 100%;
+    }
+
+    /* .header {
+        flex-wrap: wrap;
+    } */
+
+}
+
